fixes #3995. login fields more spaced apart so error messages don't overlap

--- a/web/stylus/styles/input.styl
+++ b/web/stylus/styles/input.styl
@@ -97,3 +97,9 @@ fieldset
 th, td
   input, select
     margin-bottom 0
+    
+.login-view
+  input
+    margin-bottom 1
+    height 1.5
+    font-size 1    
